research/code/wer1_infrasctrure_repos/argocd-main/prod/apps/landing/landing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
        - env:
            - name: DATABASE_SSL
              value: "true"
            - name: DATABASE_SSL_REJECT_UNAUTHORIZED
              value: "false"
          image: 956022059432.dkr.ecr.eu-west-1.amazonaws.com/strapi-cms:1.0.5
          imagePullPolicy: IfNotPresent
          name: landing-page
          ports:
            - containerPort: 1337
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/app/public/uploads
              mountPropagation: None
              name: public-uploads
      restartPolicy: Always
      volumes:
        - name: public-uploads
          persistentVolumeClaim:
            claimName: landing-page-uploads
