research/code/wer1_infrasctrure_repos/argocd-main/prod/apps/landing/landing-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  namespace: landing-page
spec:
  ports:
    - name: http
      port: 1337
      protocol: TCP
      targetPort: http
  selector:
    app: landing-page
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: nginx-private
  name: landing-page-private
  namespace: landing-page
spec:
  ingressClassName: nginx-private
  rules:
    - host: landing.private.prod.wer1.ai
      http:
        paths:
          - backend:
              service:
                name: landing-page
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - landing.private.prod.wer1.ai
      secretName: landing-private-ingress-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: nginx-public
  name: landing-page-public
  namespace: landing-page
spec:
  ingressClassName: nginx-public
  rules:
    - host: landing.public.prod.wer1.ai
      http:
        paths:
          - backend:
              service:
                name: landing-page
                port:
                  name: http
            path: /api
            pathType: ImplementationSpecific
          - backend:
              service:
                name: landing-page
                port:
                  name: http
            path: /uploads
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - landing.public.prod.wer1.ai
      secretName: landing-public-ingress-tls
